// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for danger 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      Warning!
    </p>
    <p
      class="mb-0 small"
    >
      Error!
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot for success 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      All clear!
    </p>
    <p
      class="mb-0 small"
    >
      No worries!
    </p>
  </div>
</DocumentFragment>
`;
